# loud-alarm

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: App.css  App.test.tsx  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: alarm.rs  lib.rs  main.rs  schedule.rs  siren.rs  volume.rs
src/lib/: format.test.ts  format.ts
